fix: optimize z-index in About

--- a/blocks/about/__circle/about__circle.css
+++ b/blocks/about/__circle/about__circle.css
@@ -6,4 +6,5 @@
   position: absolute;
   top: -121px;
   left: -91px;
+  z-index: -1;
 }
