--- a/blocks/about/__content/about__content.css
+++ b/blocks/about/__content/about__content.css
@@ -3,5 +3,4 @@
   flex-flow: column;
   gap: 32px;
   flex-basis: 570px;
-  z-index: 1;
 }
