--- a/blocks/about/__title/about__title.css
+++ b/blocks/about/__title/about__title.css
@@ -4,5 +4,4 @@
   line-height: 1.5;
   margin: 0;
   flex-shrink: 0;
-  z-index: 1;
 }
