--- a/blocks/about/about.css
+++ b/blocks/about/about.css
@@ -6,4 +6,5 @@
   color: var(--main-bg);
   position: relative;
   overflow: hidden;
+  z-index: 0;
 }
